2012-10-17  Ilya Tikhonovsky  <loislo@chromium.org>

        Web Inspector: NMI provide data for mixing with tcmalloc heap dumps.
        https://bugs.webkit.org/show_bug.cgi?id=99457

        Reviewed by Yury Semikhatsky.

        countObjectSize now accepts ptr as the first argument and saves it into HashMap if the binary was ran with HEAPPROFILE env variable.
        getProcessMemoryDistribution does snapshot and calls the downstream code with the map of counted objects.

        * wtf/MemoryInstrumentation.h:
        (MemoryInstrumentationClient):
        (WTF::MemoryInstrumentation::countObjectSize):
        (WTF::MemoryInstrumentation::addRawBuffer):
        (WTF::MemoryClassInfo::addPrivateBuffer):
        (WTF::MemoryInstrumentation::addObjectImpl):
        (WTF::MemoryInstrumentation::addListHashSet):
        (WTF::::process):

2012-10-18  Michael Saboff  <msaboff@apple.com>

        convertUTF8ToUTF16() Should Check for ASCII Input
        ihttps://bugs.webkit.org/show_bug.cgi?id=99739

        Reviewed by Geoffrey Garen.

        Added code to accumulate the "or" of all characters seen during the UTF8 to UTF16 conversion.  This is
        used to check to see if all characters are ASCII and is returned via a bool*.

        * wtf/unicode/UTF8.cpp:
        (WTF::Unicode::convertUTF8ToUTF16):
        * wtf/unicode/UTF8.h:

2012-10-18  Michael Saboff  <msaboff@apple.com>

        Mac WTF build checks dependencies before copying header files
        https://bugs.webkit.org/show_bug.cgi?id=99770

        Reviewed by Mark Rowe.

        Fixed up build rules per Mark Rowe. Made new target an Aggregate and removed "WTF copy".

        * Configurations/CopyWTFHeaders.xcconfig: Added.
        * Configurations/WTF.xcconfig:
        * WTF.xcodeproj/project.pbxproj:

2012-10-18  Michael Saboff  <msaboff@apple.com>

        Mac WTF build checks dependencies before copying header files
        https://bugs.webkit.org/show_bug.cgi?id=99770
