@@ -1,3 +1,12 @@
+2012-10-19  Csaba Osztrogonác  <ossy@webkit.org>
+
+        REGRESSION(r131822): It made 500+ tests crash on 32 bit platforms
+        https://bugs.webkit.org/show_bug.cgi?id=99814
+
+        Reviewed by Simon Hausmann.
+
+        * wtf/Platform.h: Disable LLINT on (PLATFORM(QT) && CPU(X86)) temporarily until proper fix.
+
 2012-10-17  Ilya Tikhonovsky  <loislo@chromium.org>
 
         Web Inspector: NMI provide data for mixing with tcmalloc heap dumps.
